force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/Exl_ExclusionRestrictionJunc__c.object-meta.xml
<CustomObject>
    <description>The object acts as a junction between Exclusion and Restriction records</description>
    <label>Exclusion Restriction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exclusion Restriction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>