force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Enforcement_Scope__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_Scope__c</fullName>
    <description>Scope of rule being enforced (e.g., Funds, Loyalty).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enforcement Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>