force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Exclusion that initiated this Restriction.</description>
    <label>Exclusion</label>
    <referenceTo>Exl_Exclusion__c</referenceTo>
    <relationshipLabel>Exclusion Restrictions</relationshipLabel>
    <relationshipName>Exclusion_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>