force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Exclusion_Status__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Status__c</fullName>
    <description>Captures the status for linked exclusion record, to identify if this exclusion was created as part of exclusion flow or not.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclusion Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>