force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Patron_Id__c.field-meta.xml
<CustomField>
    <fullName>Patron_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patron Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exclusion Restriction</relationshipLabel>
    <relationshipName>Exclusion_Restriction</relationshipName>
    <type>Lookup</type>
</CustomField>