force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Restriction__c.field-meta.xml
<CustomField>
    <fullName>Restriction__c</fullName>
    <description>The associated Restriction policy.</description>
    <label>Restriction</label>
    <referenceTo>Exl_Restriction__c</referenceTo>
    <relationshipLabel>Exclusion Restrictions</relationshipLabel>
    <relationshipName>Exclusion_Restrictions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>