force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/fields/Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>Stop_Code__c</fullName>
    <description>Hold’s the received stop code for associated restriction record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>