force-app/main/default/objects/Exl_ExclusionRestrictionJunc__c/recordTypes/Exl_Exclusion_Restrictions.recordType-meta.xml
<RecordType>
    <fullName>Exl_Exclusion_Restrictions</fullName>
    <active>true</active>
    <description>Used to support all Exclusions and Restrictions for prevention of play framework</description>
    <label>Exl Exclusion Restrictions</label>
</RecordType>